--- a/src/de_cart_contract/Cargo.toml
+++ b/src/de_cart_contract/Cargo.toml
@@ -14,3 +14,14 @@ candid = "0.9.3"
 ic-cdk = "0.10.0"
 ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
 serde = "1.0.164"
+
+[dev-dependencies]
+criterion = { version = "0.5.1" }
+
+[[bench]]
+name = "microbench_customer"
+harness = false
+
+[[bench]]
+name = "microbench_merchant"
+harness = false
