--- a/src/de_cart_contract/Cargo.toml
+++ b/src/de_cart_contract/Cargo.toml
@@ -14,6 +14,7 @@ candid = "0.9.3"
 ic-cdk = "0.10.0"
 ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
 serde = "1.0.164"
+hex = "0.4"
 
 [dev-dependencies]
 criterion = { version = "0.5.1" }
