Add useEncryption key hook

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@dfinity/auth-client": "^0.20.0",
     "@dfinity/candid": "^0.20.0",
     "@dfinity/principal": "^0.20.0",
+    "ic-vetkd-utils": "file:ic-vetkd-utils-0.1.0.tgz",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0"
