--- a/package.json
+++ b/package.json
@@ -27,15 +27,18 @@
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/jest": "^29.5.10",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "events": "3.3.0",
     "html-webpack-plugin": "5.5.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.30",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.1.4",
