--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
     "@dfinity/auth-client": "^0.20.0",
     "@dfinity/candid": "^0.20.0",
     "@dfinity/principal": "^0.20.0",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "ic-vetkd-utils": "file:ic-vetkd-utils-0.1.0.tgz",
+    "lucide-react": "^0.322.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.3",
